# promptician

./: LICENSE  README.md  pyproject.toml
promptician_app/: __init__.py  client.py  emoji.py  ghostwriter.py  history.css  history.py  infinite_load.py  playground.css  playground.py  prompt_completion.py  promptician_app.css  promptician_app.py  radio_group.py  repository.py
